--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "colors": "^1.1.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-compile-sass": "^3.0.4",
