--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^4.7.2",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "socket.io": "^1.7.2"
   }
 }
