--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
     "colors": "^1.1.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-compile-sass": "^3.0.4",
     "express-session": "^1.14.2",
     "mongoose": "^4.7.2",
     "morgan": "^1.7.0",
+    "node-sass": "^4.4.0",
     "path": "^0.12.7",
     "request": "^2.79.0",
     "socket.io": "^1.7.2"
