--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install",
     "test": "karma start test/karma.conf.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bower": "^1.8.0",
     "colors": "^1.1.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.5",
