--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "socket.io": "^1.7.2",
-    "angular-md5": "^0.1.10"
+    "angular-md5": "^0.1.10",
+    "angular-bootstrap": "^2.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
