--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.4.0",
     "socket.io": "^1.7.2",
     "angular-md5": "^0.1.10",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
